--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
-#heading{
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-evenly;
+    border: 2px solid black;
+}
+
+img {
+    width: 150px;
+}
+.nav-items{
+    padding: 0px, 30xp;
+}
+.nav-items > ul {
+    display: flex;
+    font-size:  24px;
+    padding: 0px 20px;
+    list-style-type: none;
+}
+
+.nav-items > ul > li{
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-card {
+    width: 200px;
+    height: 300px;
+    border: 2px solid black;
+    background-color: #f0f0f0;
+}
+
+.search{
+    padding: 10px;
 }
